3.19.0:
-Local time configuration setting
-Timestamping for notifyme (alexa) alerts
-Margin leverage fields / calculations / stats
-------------------------------------------------------------------



-------------------------------------------------------------------
3.19.1:
-Bug fix for layout spacing with the new margin leverage fields, on the Update Assets page
-------------------------------------------------------------------



-------------------------------------------------------------------
3.20.0:
-Better UI / UX for table sorting / margin leverage stats
-------------------------------------------------------------------



-------------------------------------------------------------------
3.20.1:
-Bug fix for info balloons to not word wrap lines (was minimizing balloon width too much on mobile)
-Fixed error logging for base pairings info, when chart / price alert runs for BTC / USD markets
-------------------------------------------------------------------



-------------------------------------------------------------------
3.20.2:
-Bug fix for broken HTML in new code
-HTML validation / optimizations
-------------------------------------------------------------------



-------------------------------------------------------------------
3.21.0:
-Cleaned up margin trades UI / UX
-Added margin short trade tracking
-Minor misc. UX tweaks
-------------------------------------------------------------------



-------------------------------------------------------------------
3.22.0:
-Block volume error configuration setting
-UI / UX tweaks
-Modularized some code into separate files / functions
-Minor bug fixes
-------------------------------------------------------------------



-------------------------------------------------------------------
3.23.0:
-UI / UX tweaks
-More USDC markets in default config
-------------------------------------------------------------------


































